--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "papaparse": "^5.4.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "save": "^2.9.0"
+    "save": "^2.9.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
