user-backend creation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "declaration": true,
+    "types": ["node", "uuid", "@types/bcrypt"],
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
