--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
   "dependencies": {
     "@nestjs/common": "^10.1.3",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "^2.0.2",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^10.1.3",
+    "@types/bcrypt": "^5.0.0",
+    "@types/uuid": "^9.0.2",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "csvtojson": "^2.0.10",
-    "mongoose": "^7.4.3",
+    "mongoose": "^7.4.5",
     "multer": "^1.4.5-lts.1",
     "papaparse": "^5.4.1",
     "reflect-metadata": "^0.1.13",
