--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "dependencies": {
     "@nestjs/common": "^10.1.3",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.1.0",
     "@nestjs/mapped-types": "^2.0.2",
     "@nestjs/mongoose": "^10.0.1",
+    "@nestjs/passport": "^10.0.1",
     "@nestjs/platform-express": "^10.1.3",
     "@types/bcrypt": "^5.0.0",
     "@types/uuid": "^9.0.2",
@@ -34,6 +36,9 @@
     "mongoose": "^7.4.5",
     "multer": "^1.4.5-lts.1",
     "papaparse": "^5.4.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "save": "^2.9.0",
@@ -47,6 +52,8 @@
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.3.1",
+    "@types/passport-jwt": "^3.0.9",
+    "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
